# ostep-hw

./: .gitignore  CMakeLists.txt  README.md  main.c
13-vm-intro/: Makefile  answer.md  memory-user.c
14-vm-api/: Makefile  answers.md  array-of-ints.c  null.c  vector.c  vector.h
15-vm-mechanism/: answers.md
16-vm-segmentation/: answers.md
17-vm-freespace/: answers.md
18-vm-paging/: answers.md
19-vm-tlb-paging/: Makefile  answers.md  chart  data  generate-chart.sh  tlb.c
19-vm-tlb-paging/ploticus242/pltestsuite/: Diag.out  Makefile  README  annot  annot2.htm  bars3.htm  bigcsv.pl  catlines1.htm  colorgrid.htm  colorgrid2.htm  csmap.out  data1  data10  data10h  data11  data12  data13  data14  data15  data16  data18  data19  data2  data20  data21  data22  data23  data24  data25  data26  data27  data28  data3  data4  data5  data6  data6b  data7  data8  data9  (+53 more)
19-vm-tlb-paging/ploticus242/prefabs/: README  SCP  chron.pl  chron.pl-  chron.pl--  chunk_area  chunk_chronfilter  chunk_doheatmap  chunk_heatmapfilter  chunk_logstubs  chunk_logtics  chunk_read  chunk_setstd  chunk_stackareafilter  chunk_title  chunk_vdistfilter  chunk_xaxis  chunk_yaxis  compare.pl  cumufrac.pl  dist.pl  draw.pl  heatmap.pl  heatmap.pl-  lines.pl  multidist.pl  pie.pl  processdata.pl  scat.pl  stack.pl  vbars.pl  vdist.pl
19-vm-tlb-paging/ploticus242/src/: .sh_history  Copyright  GPL.txt  Makefile  Makefile_orig  NOTES_sharedlib_python  README  api.c  apitest.c  arrow.c  autorange.c  block.c  cats.c  clickmap.c  color.c  condex.c  custom.c  datasets.c  dates.c  datetime.c-  dbfunc.c  dbinterface.c  details.c  devstuff.c  err.c  execline.c  execscriptfile.c  (+94 more)
20-vm-smalltables/: answers.md  paging-multilevel-translate.py
21-vm-beyondphys/: Makefile  answers.md  mem.c
22-vm-beyondphys-policy/: answers.md  paging-policy.py  plot.py  run.sh  transform.py
26-threads-intro/: answers.md  looping-race-nolock.s  simple.s  wait-for-me.s
27-threads-api/: Makefile  answers.md  main-deadlock-global.c  main-deadlock.c  main-race.c  main-signal-cv.c
28-threads-locks/: answers.md  flag.s  peterson.s  test-and-set.s  test-and-test-and-set.s  ticket.s  yield.s
29-threads-cv/: Makefile  answers.md
30-threads-cv/: main-common.c  main-two-cvs-while.c
31-threads-sema/: answers.md  barrier.c  fork-join.c  lightswitch.h  mutex-nostarve.c  reader-writer-nostarve.c  reader-writer.c  rendezvous.c  zemaphore.h
32-threads-bugs/: answers.md
37-file-disks/: answers.md
38-file-raid/: answers.md
39-file-files-and-directories/: common.h  counter.d  foo  myfind.c  myls.c  mytail.c  stat.c  truss.d  trussrw.d
40-file-implementation/: answers.md
41-file-ffs/: answers.md
42-file-journaling/: answers.md
43-file-lfs/: answers.md
44-file-ssd/: answers.md
45-file-integrity/: Makefile  answers.md  answers_part2.md  check-fletcher.c  check-xor.c  checksums.h  common.h  test-xor-fletcher.c
48-dist-intro/: Makefile  UDP-client.c  UDP-lib.h  UDP-server.c  answers.md
50-afs/: .#answers.md  answers.md
cpu-api/: answers.md
cpu-intro/: answers.md
cpu-limited-direct-execution/: Makefile  README.md  homework.c
cpu-sched/: answers.md
cpu-sched-lottery/: answers.md
cpu-sched-mlfq/: answers.md
(+3 files in other folders)
